Added thumbnail images and wrote html for thumbnail section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Landing Page</title>
 </head>
 <body>
+
   <div class="header">
     Header Logo
     <ul>
@@ -16,7 +17,21 @@
     <h1>This website is awesome</h1>
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
     <button>Sign up</button>
-    <img src="images/thumbs up.png">
+    <img src="images/thumbs up.png" alt="a thumbs up">
   </div>
+
+  <div class="content">
+    <h2>Some random information.</h2>
+    <img class="thumbnail" src="images/pexels-btgl-♡-3894157.jpg" alt="the ocean">
+    <p>This website is as vast as the ocean</p>
+    <img class="thumbnail" src="images/pexels-craig-adderley-1563356.jpg" alt="a road in autumn">
+    <p>This website is as cool as the autumn breeze on a motorcycle</p>
+    <img class="thumbnail" src="images/pexels-jess-bailey-designs-929773.jpg" alt="seagulls in the sky">
+    <p>This website is as free as the birds in the sky</p>
+    <img class="thumbnail" src="images/pexels-pixabay-36717.jpg" alt="a tree on the coastline at sunset">
+    <p>This website is as beautiful as an African sunset</p>
+  </div>
+
+  
 </body>
 </html>
