--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
     <p>This website is as beautiful as an African sunset</p>
   </div>
 
-  
+  <div class="quote">
+    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+    <p>-Thor, God of Thunder</p>
+  </div>
+
+  <div class="sign-up">
+    <h3>Call to action! It's time!</h3>
+    <p>Sign up for our product by clicking that button right over there!</p>
+    <button>Sign up</button>
+  </div>
+
+  <div class="footer">
+    <p>Copyright The Odin Project 2021</p>
+  </div>
 </body>
 </html>
