--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Landing Page</title>
 </head>
 <body>
 
   <div class="header">
-    Header Logo
+    <p class ="header-logo">Header Logo</p>
     <ul>
       <li><a href="#">header link one</a></li>
       <li><a href="#">header link two</a></li>
@@ -17,7 +18,7 @@
     <h1>This website is awesome</h1>
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
     <button>Sign up</button>
-    <img src="images/thumbs up.png" alt="a thumbs up">
+    <img class="thumb" src="images/thumbs up.png" alt="a thumbs up">
   </div>
 
   <div class="content">
@@ -32,8 +33,8 @@
     <p>This website is as beautiful as an African sunset</p>
   </div>
 
-  <div class="quote">
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+  <div class="quote-section">
+    <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
     <p>-Thor, God of Thunder</p>
   </div>
 
