--- a/index.html
+++ b/index.html
@@ -7,45 +7,53 @@
   <title>Landing Page</title>
 </head>
 <body>
+  <div class="full-page">
+    <div class="header">
+      <div class="top-bar">
+        <p class ="header-logo">Header Logo</p>
+        <ul class="header-links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
+      <div class="hero-container">
+        <div class="hero">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <button>Sign up</button>
+        </div>
+          <img class="thumb" src="images/thumbs up.png" alt="a thumbs up">
+        </div>
+      
+    </div>
 
-  <div class="header">
-    <p class ="header-logo">Header Logo</p>
-    <ul>
-      <li><a href="#">header link one</a></li>
-      <li><a href="#">header link two</a></li>
-      <li><a href="#">header link three</a></li>
-    </ul>
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-    <button>Sign up</button>
-    <img class="thumb" src="images/thumbs up.png" alt="a thumbs up">
-  </div>
+    <div class="content">
+      <h2>Some random information.</h2>
+      <img class="thumbnail" src="images/pexels-btgl-♡-3894157.jpg" alt="the ocean">
+      <p>This website is as vast as the ocean</p>
+      <img class="thumbnail" src="images/pexels-craig-adderley-1563356.jpg" alt="a road in autumn">
+      <p>This website is as cool as the autumn breeze on a motorcycle</p>
+      <img class="thumbnail" src="images/pexels-jess-bailey-designs-929773.jpg" alt="seagulls in the sky">
+      <p>This website is as free as the birds in the sky</p>
+      <img class="thumbnail" src="images/pexels-pixabay-36717.jpg" alt="a tree on the coastline at sunset">
+      <p>This website is as beautiful as an African sunset</p>
+    </div>
 
-  <div class="content">
-    <h2>Some random information.</h2>
-    <img class="thumbnail" src="images/pexels-btgl-♡-3894157.jpg" alt="the ocean">
-    <p>This website is as vast as the ocean</p>
-    <img class="thumbnail" src="images/pexels-craig-adderley-1563356.jpg" alt="a road in autumn">
-    <p>This website is as cool as the autumn breeze on a motorcycle</p>
-    <img class="thumbnail" src="images/pexels-jess-bailey-designs-929773.jpg" alt="seagulls in the sky">
-    <p>This website is as free as the birds in the sky</p>
-    <img class="thumbnail" src="images/pexels-pixabay-36717.jpg" alt="a tree on the coastline at sunset">
-    <p>This website is as beautiful as an African sunset</p>
-  </div>
+    <div class="quote-section">
+      <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+      <p>-Thor, God of Thunder</p>
+    </div>
 
-  <div class="quote-section">
-    <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-    <p>-Thor, God of Thunder</p>
-  </div>
+    <div class="sign-up">
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button>Sign up</button>
+    </div>
 
-  <div class="sign-up">
-    <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button>Sign up</button>
-  </div>
-
-  <div class="footer">
-    <p>Copyright The Odin Project 2021</p>
+    <div class="footer">
+      <p>Copyright The Odin Project 2021</p>
+    </div>
   </div>
 </body>
 </html>
