--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="hero">
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-          <button>Sign up</button>
+          <button class="top-button">Sign up</button>
         </div>
           <img class="thumb" src="images/thumbs up.png" alt="a thumbs up">
         </div>
@@ -30,14 +30,20 @@
 
     <div class="content">
       <h2>Some random information.</h2>
-      <img class="thumbnail" src="images/pexels-btgl-♡-3894157.jpg" alt="the ocean">
-      <p>This website is as vast as the ocean</p>
-      <img class="thumbnail" src="images/pexels-craig-adderley-1563356.jpg" alt="a road in autumn">
-      <p>This website is as cool as the autumn breeze on a motorcycle</p>
-      <img class="thumbnail" src="images/pexels-jess-bailey-designs-929773.jpg" alt="seagulls in the sky">
-      <p>This website is as free as the birds in the sky</p>
-      <img class="thumbnail" src="images/pexels-pixabay-36717.jpg" alt="a tree on the coastline at sunset">
-      <p>This website is as beautiful as an African sunset</p>
+      <div class="image-container">
+        <img class="thumbnail" src="images/pexels-btgl-♡-3894157.jpg" alt="the ocean">        
+        <img class="thumbnail" src="images/pexels-craig-adderley-1563356.jpg" alt="a road in autumn">
+        <img class="thumbnail" src="images/pexels-jess-bailey-designs-929773.jpg" alt="seagulls in the sky">
+        <img class="thumbnail" src="images/pexels-pixabay-36717.jpg" alt="a tree on the coastline at sunset">
+      </div>
+
+      <div class="text-container">
+        <p class="under-photo">This website is as vast as the ocean</p>
+        <p class="under-photo">This website is as cool as the autumn breeze on a motorcycle</p>
+        <p class="under-photo">This website is as free as the birds in the sky</p>
+        <p class="under-photo">This website is as beautiful as an African sunset</p>
+      </div>
+
     </div>
 
     <div class="quote-section">
