Clean up HTML p tags

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
       </div>
 
       <div class="text-container">
-        <p class="under-photo">This website is as vast as the ocean</p>
-        <p class="under-photo">This website is as cool as the autumn breeze on a motorcycle</p>
-        <p class="under-photo">This website is as free as the birds in the sky</p>
-        <p class="under-photo">This website is as beautiful as an African sunset</p>
+        <p>This website is as vast as the ocean</p>
+        <p>This website is as cool as the autumn breeze on a motorcycle</p>
+        <p>This website is as free as the birds in the sky</p>
+        <p>This website is as beautiful as an African sunset</p>
       </div>
+      
 
     </div>
 
